syntax = "proto3";
option go_package ="../leveldb/";

package leveldb;

message KData {
    uint32  time      = 1;
    float   open      = 2;
    float   close     = 3;
    float   high      = 4;
    float   low       = 5;
    double  volume    = 6;
    double  turnover  = 7;
}


message XData {
    enum type {
        XDR = 0;
        EXP = 1;
    }
    uint32 Date           = 1;
    type   Type           = 2;
    float  AllotVolume    = 3;
    float  AllotPrice     = 4;
    float  BonusVolume    = 5;
    float  BonusPrice     = 6;
}

message VData {
    enum type {
        NONE = 0;
    }
    uint32  Date            = 1;
    type    Type            = 2;
    double  PreTradable     = 3;
    double  PreTotal        = 4;
    double  PostTradable    = 5;
    double  PostTotal       = 6;
}

message RecordLday {
    string            code = 1;
    optional uint32   flag = 2;
    repeated KData    data = 3;
}

message RecordXDR {
    string            code = 1;
    optional uint32   flag = 2;
    repeated XData    data = 3;
}

message RecordVol {
    string            code = 1;
    optional uint32   flag = 2;
    repeated VData    data = 3;
}